--- a/.github/workflows/hlf-image.yaml
+++ b/.github/workflows/hlf-image.yaml
@@ -2,6 +2,8 @@ name: ci
 
 on:
   push:
+    branches:
+      - main
     tags:
       - '*'
 
@@ -11,28 +13,22 @@ jobs:
     strategy:
       matrix:
         hlf-version:
-          - "2.2.0"
-          - "2.2.3"
-          - "2.3.0"
-          - "2.3.2"
-          - "2.4.0"
-          - "2.4.1"
-          - "2.4.3"
+          - "2.5.1"
     steps:
       -
         name: Checkout code
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
       -
         name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v1
+        uses: docker/setup-buildx-action@v2
       -
         name: Docker meta
         id: meta
-        uses: docker/metadata-action@v3
+        uses: docker/metadata-action@v4
         with:
           # list of Docker images to use as base name for tags
           images: |
-            ghcr.io/kfsoftware/fabric-peer
+            ghcr.io/fabric-gm/fabric-peer-k8s
           # generate Docker tags based on the following events/attributes
           flavor:
             prefix=${{matrix.hlf-version}}-v,onlatest=false
@@ -46,7 +42,7 @@ jobs:
             type=sha
       -
         name: Login to GitHub Container Registry
-        uses: docker/login-action@v1
+        uses: docker/login-action@v2
         with:
           registry: ghcr.io
           username: ${{ github.actor }}
@@ -55,7 +51,7 @@ jobs:
       -
         name: Build and push
         id: docker_build
-        uses: docker/build-push-action@v2
+        uses: docker/build-push-action@v4
         with:
           file: ./images/fabric-peer/${{matrix.hlf-version}}/Dockerfile
           context: .
