--- a/images/fabric-peer/2.5.0/Dockerfile.internal
+++ b/images/fabric-peer/2.5.0/Dockerfile.internal
@@ -1,4 +1,4 @@
-FROM easzlab.io.local:5000/golang:1.15.2-alpine3.12 as builder
+FROM golang:1.15.2-alpine3.12 as builder
 WORKDIR /workspace
 ENV GOPROXY https://goproxy.cn
 COPY go.mod go.mod
@@ -8,7 +8,7 @@ RUN go mod tidy
 RUN CGO_ENABLED=0 go build -o launcher ./cmd/launcher
 
 
-FROM easzlab.io.local:5000/hyperledger/fabric-peer:2.5.0
+FROM hyperledger/fabric-peer:2.5.0
 RUN mkdir -p /builders/golang/bin
 
 COPY --from=builder /workspace/launcher  /builders/golang/bin/externalcc
